--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@ body {
   margin: 20px;
   font-size: 14px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: #555; }
+  color: #555;
+}
 
 .iti__hide {
   display: none; }
@@ -65,11 +66,23 @@ button {
 #result {
   margin-bottom: 100px; }
 
+.form-label {
+  margin-bottom: 1.5rem;
+}
+
 .bg-default {
-  background-color: #fff; }
+  background-color: #01e675;
+}
+
+.bg-custom {
+  padding-top: 3%;
+  background-color: #fff;
+  height: 670px;
+  border: 2px;
+  border-radius: 10px;
+}
 
 .form_submit {
-  background-color: #26d367;
   border: 0;
   padding: 20px 30px;
   border-radius: 5px;
@@ -79,4 +92,35 @@ button {
   text-decoration: none;
   color: #fff;
   box-shadow: 1px 1px 17px #00000030;
+}
+
+.center {
+  text-align: -webkit-center;
+}
+
+.bg-form {
+  padding: 1em;
+  border: 2px;
+  border-radius: 10px;
+  background-color: #a6a6a612; !important
+}
+
+.btn-center {
+  display: block;
+  margin: 0 20%;
+  background-color: #01e675;
+  border-color: #01e675;
+}
+
+.margin-top{
+  margin-top: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem!important;
+}
+input {
+  border-radius: 5px;
+  border: 0.5px solid
+  border-color: #01e675;
 }
